--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "homepage": "http://jarrodspillers.com/react-tone-synth",
   "dependencies": {
-    "bootstrap": "^3.4.0",
+    "bootstrap": "^3.4.1",
     "dot-prop-immutable": "^1.5.0",
-    "node-sass-chokidar": "^1.3.4",
+    "merge": "^1.2.1",
+    "node-sass-chokidar": "^1.3.5",
     "npm-run-all": "^4.1.5",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
     "react-browser-detection": "^1.2.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
     "react-redux": "^5.1.1",
-    "react-rotary-knob": "^1.1.4",
+    "react-rotary-knob": "^1.1.5",
     "react-rotary-knob-skin-pack": "^1.0.2",
     "react-scripts": "1.1.5",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "tone": "^0.12.80"
   },
   "scripts": {
@@ -30,6 +31,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "redux-devtools": "^3.5.0"
+    "redux-devtools": "^3.5.0",
+    "webpack-dev-server": "^3.7.2"
   }
 }
